<resources>
    <string name="app_name">Juvenna</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="member">Member</string>
    <string name="je_world">JE World</string>
    <string name="menu">Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="about_account">About Account</string>
    <string name="midtrans">Midtrans</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Paypal</string>
    <string name="order">Order</string>
    <string name="jeproduction">JEProduction</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="featured_products">Featured Products</string>
    <string name="onsale_products">Onsale Products</string>
    <string name="technoloje">TechnoloJE</string>
    <string name="products">Products</string>
    <string name="register">REGISTER</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="jv_world">JV World</string>
    <string name="juvenna_world">Juvenna World</string>
    <string name="jeworld">JE World</string>
</resources>