<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/logojuvenile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="32dp"
        android:id="@+id/txt_input_email_regis"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        android:textColorHint="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:boxStrokeColor="@color/gold">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/gold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:fontFamily="@font/rubik_light"
            android:padding="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="16dp"
        android:id="@+id/txt_input_password_regis"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        android:textColorHint="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_email_regis"
        app:boxStrokeColor="@color/gold"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gold">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:fontFamily="@font/rubik_light"
            android:padding="8dp"
            android:textColorHint="@color/gold"/>
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btn_regis"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        style="@style/FormButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_password_regis"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_regis"
        android:id="@+id/name_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="492dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="10dp"
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="apem manis" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>